welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:6: error: type mismatch;
 found   : Unit
 required: Int
  else if ( ((a == b) && (a == c)) || ((b == c) && (c == a)))
       ^